--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-dark mb-4" style="background-color: #456D7A;">
 	<div class="container">
-		<a class="navbar-brand" href="/">Sistema de Voto</a>
+		<a class="navbar-brand" href="/">Pollster</a>
 			<span>
 				{% if user.is_authenticated %}
-					<a class="navbar-brand" href="/profile">Perfil</a>
-					<a class="navbar-brand" href="/logout">Sair</a>
+					<a class="navbar-brand" href="/profile">Profile</a>
+					<a class="navbar-brand" href="/logout">Logout</a>
 				{% else %}
 					<a class="navbar-brand" href="/login">Login</a>
 					<a class="navbar-brand" href="/register">Register</a>
